Logos grid fix + No longer broken on phone

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -361,8 +361,8 @@ a {
 /* Brands */
 
 .brand {
-  height: 170px;
-  width: 170px;
+  height: 160px;
+  width: 160px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -370,30 +370,41 @@ a {
   -moz-box-shadow: 0px 0px 66px 44px rgba(0, 0, 0, 0.03);
   box-shadow: 0px 0px 66px 44px rgba(0, 0, 0, 0.02);
 }
-#logo_grid {
+/*#logo_grid {
   margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 1em;
+}*/
+
+#logo_grid {
+  margin: auto;
+  display: grid;
+  display: flex;
+  flex-wrap: wrap;
+  grid-gap: 1.5em;
+  justify-content: center;
 }
 
 @media screen and (max-width: 600px) {
   #brands {
-    width: 353px;
     margin: auto;
   }
 
   .brand {
-    margin: 2px;
+    height: 280px;
+    width: 280px;
   }
 }
 /*Contact*/
-#contact {
-  margin: auto;
+/* #contact {
+   margin: auto;
 }
+*/
 #contactdiv {
-  width: 900px;
-  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr, 1fr;
+  grid-gap: 2rem;
 }
 #mapdiv {
   display: inline-block;
@@ -401,12 +412,9 @@ a {
   height: 500px;
 }
 .contactform {
-  width: 33%;
-  display: inline-block;
+  width: 200px;
   height: 500px;
-  margin: 0px;
   vertical-align: top;
-  margin: auto;
   text-align: center;
 }
 
@@ -532,6 +540,16 @@ a {
   margin: auto;
   text-align: center;
   display: inline-block;
+}
+@media screen and (max-width: 600px) {
+  .projectTextDiv {
+    width: 100%;
+    height: 200px;
+    padding-top: 0px;
+  }
+  .gallery {
+    width: 100%;
+  }
 }
 
 .aboutustitle {
